# tiktok-live-recorder

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  entrypoint.sh  pyproject.toml
.cursor/rules/: version-bump-before-push.mdc
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: install-test.yml  pytest.yml  release.yml  ruff.yml
config/: cookies.json.example  telegram.json.example
docs/: GUIDE.md
src/: check_updates.py  entrypoint.sh  main.py
src/core/: tiktok_api.py  tiktok_recorder.py
src/tiktok_live_recorder/: __init__.py  __main__.py  check_updates.py  cli.py
src/tiktok_live_recorder/core/: tiktok_api.py  tiktok_recorder.py
src/tiktok_live_recorder/http_utils/: http_client.py
src/tiktok_live_recorder/upload/: telegram.py
src/tiktok_live_recorder/utils/: args_handler.py  custom_exceptions.py  dependencies.py  enums.py  recorder_config.py  utils.py  version.py  video_management.py
src/upload/: telegram.py
src/utils/: args_handler.py  enums.py  recorder_config.py  utils.py  version.py  video_management.py
tests/: test_config_paths.py  test_output_paths.py  test_tiktok_api.py  test_tiktok_recorder.py  test_version.py  test_waf_utils.py
tests/cli/: test_validate_args.py
